--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,8 +2,7 @@ name: Scrape Moroccan Finance News
 
 on:
   schedule:
-    # Runs every day at 08:00 UTC (10:00 in Canary time)
-    - cron: '0 8 * * *'
+    - cron: '0 * * * *'    # At minute 0 of every hour
   workflow_dispatch:    # allows manual trigger
 
 jobs:
