--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,5 +1,8 @@
 name: Scrape Moroccan Finance News
 
+permissions:
+  contents: write    # allows the workflow to commit & push changes
+
 on:
   schedule:
     - cron: '0 * * * *'    # At minute 0 of every hour
