--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -19,6 +19,14 @@ jobs:
           fetch-depth: 0             # fetch full history so we can commit
           persist-credentials: true  # enable pushing back via GITHUB_TOKEN
 
+      - name: Restore state cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            sent_articles.json
+            fetch_failures.json
+          key: state-files-${{ runner.os }}-global
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -34,12 +42,11 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python scrape_and_notify.py
 
-      - name: Commit updated state files
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add sent_articles.json fetch_failures.json
-          git diff --quiet && echo "No changes to commit" || git commit -m "Auto-update state files"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Save state cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            sent_articles.json
+            fetch_failures.json
+          key: state-files-${{ runner.os }}-global
+
