--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '0 */2 * * *'
+    - cron: '0 */2 * * *'    # every 2 hours, minute 0
   workflow_dispatch:
 
 jobs:
@@ -33,12 +33,12 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python scrape_and_notify.py
 
-      - name: Commit updated sent state
+      - name: Commit updated state files
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add sent_articles.json
-          git diff --quiet && echo "No changes to commit" || git commit -m "chore: update sent_articles.json"
+          git add sent_articles.json fetch_failures.json
+          git diff --quiet && echo "No changes to commit" || git commit -m "chore: update state for $(date -u +%F)"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
