--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -44,7 +44,11 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add sent_articles.json fetch_failures.json
-          git diff --quiet && echo "No changes to commit" || git commit -m "chore: update state for $(date -u +%F)"
-          git push
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: update state for $(date -u +%F)"
+            git push
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
