--- a/sources.yml
+++ b/sources.yml
@@ -1,3 +1,4 @@
+# Finances News
 - name: financesnews
   list_url: "https://fnh.ma/articles/actualite-financiere-maroc"
   base_url: "https://fnh.ma"
@@ -10,19 +11,10 @@
     date: "div.td-post-date"
   date_regex: "\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b"
   month_map:
-    Janvier: "01"
-    Février: "02"
-    Mars: "03"
-    Avril: "04"
-    Mai: "05"
-    Juin: "06"
-    Juillet: "07"
-    Août: "08"
-    Septembre: "09"
-    Octobre: "10"
-    Novembre: "11"
-    Décembre: "12"
+    Janvier: "01"; Février: "02"; Mars: "03"; Avril: "04"; Mai: "05"; Juin: "06"
+    Juillet: "07"; Août: "08"; Septembre: "09"; Octobre: "10"; Novembre: "11"; Décembre: "12"
 
+# L’Economiste
 - name: leconomiste
   list_url: "https://www.leconomiste.com/categorie/March%C3%A9s-Financiers"
   base_url: "https://www.leconomiste.com"
@@ -35,6 +27,7 @@
     date: "span.date, span.date-display-single"
   date_regex: "Le\\s+(\\d{1,2})\\/(\\d{1,2})\\/(\\d{4})"
 
+# Médias24
 - name: medias24
   list_url: "https://medias24.com/categorie/leboursier/actus/"
   base_url: "https://medias24.com"
@@ -47,6 +40,7 @@
     date: "span.date, time"
   date_regex: "Le\\s*(\\d{1,2})\\/(\\d{1,2})\\/(\\d{4})"
 
+# EcoActu – Économie Nationale
 - name: ecoactu
   list_url: "https://ecoactu.ma/economie/economie-nationale/"
   base_url: "https://ecoactu.ma"
@@ -59,19 +53,10 @@
     date: "time.entry-date"
   date_regex: "\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b"
   month_map:
-    Janvier: "01"
-    Février: "02"
-    Mars: "03"
-    Avril: "04"
-    Mai: "05"
-    Juin: "06"
-    Juillet: "07"
-    Août: "08"
-    Septembre: "09"
-    Octobre: "10"
-    Novembre: "11"
-    Décembre: "12"
+    Janvier: "01"; Février: "02"; Mars: "03"; Avril: "04"; Mai: "05"; Juin: "06"
+    Juillet: "07"; Août: "08"; Septembre: "09"; Octobre: "10"; Novembre: "11"; Décembre: "12"
 
+# Bourse de Casablanca (insights institutionnels)
 - name: casablanca_bourse
   list_url: "https://www.casablanca-bourse.com/en/insights-institutionnels"
   base_url: "https://www.casablanca-bourse.com"
