--- a/sources.yml
+++ b/sources.yml
@@ -11,8 +11,18 @@
     date: "div.td-post-date"
   date_regex: "\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b"
   month_map:
-    Janvier: "01"; Février: "02"; Mars: "03"; Avril: "04"; Mai: "05"; Juin: "06"
-    Juillet: "07"; Août: "08"; Septembre: "09"; Octobre: "10"; Novembre: "11"; Décembre: "12"
+    Janvier: "01"
+    Février: "02"
+    Mars: "03"
+    Avril: "04"
+    Mai: "05"
+    Juin: "06"
+    Juillet: "07"
+    Août: "08"
+    Septembre: "09"
+    Octobre: "10"
+    Novembre: "11"
+    Décembre: "12"
 
 # L’Economiste
 - name: leconomiste
@@ -53,10 +63,20 @@
     date: "time.entry-date"
   date_regex: "\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b"
   month_map:
-    Janvier: "01"; Février: "02"; Mars: "03"; Avril: "04"; Mai: "05"; Juin: "06"
-    Juillet: "07"; Août: "08"; Septembre: "09"; Octobre: "10"; Novembre: "11"; Décembre: "12"
+    Janvier: "01"
+    Février: "02"
+    Mars: "03"
+    Avril: "04"
+    Mai: "05"
+    Juin: "06"
+    Juillet: "07"
+    Août: "08"
+    Septembre: "09"
+    Octobre: "10"
+    Novembre: "11"
+    Décembre: "12"
 
-# Bourse de Casablanca (insights institutionnels)
+# Bourse de Casablanca
 - name: casablanca_bourse
   list_url: "https://www.casablanca-bourse.com/en/insights-institutionnels"
   base_url: "https://www.casablanca-bourse.com"
