--- a/sources.yml
+++ b/sources.yml
@@ -9,7 +9,7 @@
     description: "div.list_article_detail p"
     image: "img::attr(src)"
     date: "label.itemdate"
-  date_regex: "\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b"
+  date_regex: '\b(\d{1,2})\s+([A-Za-zéû]+)\s+(\d{4})\b'
   month_map:
     Janvier: "01"
     Février: "02"
@@ -31,5 +31,48 @@
   selectors:
     container: "div.row"
     headline: "h2 a"
-    link_attr: "
-::contentReference[oaicite:0]{index=0}
+    link_attr: "href"
+    description: ""            # no hay snippet
+    image: "img::attr(src)"
+    date: "span.date-display-single"
+  date_regex: '(\d{1,2})/(\d{1,2})/(\d{2,4})'
+
+# Médias24 – rubrique « Bourse LeBoursier »
+- name: medias24
+  list_url: "https://medias24.com/categorie/leboursier/bourse-leboursier/"
+  base_url: "https://medias24.com"
+  selectors:
+    container: "div.recent-post-info"
+    headline: "h1 a"
+    link_attr: "href"
+    description: "div.description-recent a"
+    image: "span.recent-post-info-img img::attr(src)"
+    date: "span.date-post"
+  date_regex: 'Le\s*(\d{1,2})/(\d{1,2})/(\d{4})'
+
+# EcoActu – Économie Nationale
+- name: ecoactu
+  list_url: "https://ecoactu.ma/economie/economie-nationale/"
+  base_url: "https://ecoactu.ma"
+  selectors:
+    container: "li.list-post"
+    headline: "h2 a"
+    link_attr: "href"
+    description: "div.item-content p"
+    image: "div.thumbnail a::attr(style), figure img::attr(src), img::attr(src)"
+    date: "time.entry-date"
+  date_regex: '\b(\d{1,2})\s+([A-Za-zéû]+)\s+(\d{4})\b'
+  month_map: *month_map
+
+# Bourse de Casablanca
+- name: casablanca_bourse
+  list_url: "https://www.casablanca-bourse.com/en/insights-institutionnels"
+  base_url: "https://www.casablanca-bourse.com"
+  selectors:
+    container: "div.h-full.flex.flex-col.rounded-lg"
+    headline: "h3"
+    link_attr: "href"
+    description: "a p"
+    image: "img::attr(src)"
+    date: "p.text-gray-300.text-xs"
+  date_regex: '(\d{4})-(\d{2})-(\d{2})'
