--- a/sources.yml
+++ b/sources.yml
@@ -13,23 +13,23 @@
   month_map: &month_map
     Janvier: "01"
     Février: "02"
-    Mars: "03"
-    Avril: "04"
-    Mai: "05"
-    Juin: "06"
+    Mars:    "03"
+    Avril:   "04"
+    Mai:     "05"
+    Juin:    "06"
     Juillet: "07"
-    Août: "08"
+    Août:    "08"
     Septembre: "09"
-    Octobre: "10"
-    Novembre: "11"
-    Décembre: "12"
+    Octobre:   "10"
+    Novembre:  "11"
+    Décembre:  "12"
 
 # L’Economiste – Finances & Banques
 - name: leconomiste
   list_url: "https://www.leconomiste.com/categorie/Finances-Banques"
   base_url: "https://www.leconomiste.com"
   selectors:
-    container: "div.image_une"          # bloque que engloba miniatura + título
+    container: "div.image_une"
     headline: "h2 a"
     link_attr: "href"
     description: ""
@@ -37,7 +37,7 @@
     date: "span.date-display-single"
   date_regex: '(\d{1,2})/(\d{1,2})/(\d{2,4})'
 
-# Médias24 – feed RSS de LeBoursier
+# Médias24 – feed RSS LeBoursier
 - name: medias24
   list_url: "https://medias24.com/categorie/leboursier/bourse-leboursier/feed/"
   base_url: "https://medias24.com"
@@ -46,20 +46,29 @@
     headline: "title"
     link_attr: "link"
     description: "description"
-    image: ""                # el RSS no trae miniatura
+    image: ""
     date: "pubDate"
-  # «Fri, 25 Jul 2025 09:34:00 +0000»
   date_regex: '(\d{2})\s+(\w{3})\s+(\d{4})'
   month_map:
-    Jan: "01"; Feb: "02"; Mar: "03"; Apr: "04"; May: "05"; Jun: "06"
-    Jul: "07"; Aug: "08"; Sep: "09"; Oct: "10"; Nov: "11"; Dec: "12"
+    Jan: "01"
+    Feb: "02"
+    Mar: "03"
+    Apr: "04"
+    May: "05"
+    Jun: "06"
+    Jul: "07"
+    Aug: "08"
+    Sep: "09"
+    Oct: "10"
+    Nov: "11"
+    Dec: "12"
 
 # EcoActu – Économie Nationale
 - name: ecoactu
   list_url: "https://ecoactu.ma/economie/economie-nationale/"
   base_url: "https://ecoactu.ma"
   selectors:
-    container: "article.item"           # estructura real de la lista
+    container: "article.item"
     headline: "h2 a"
     link_attr: "href"
     description: "div.item-content p"
