--- a/sources.yml
+++ b/sources.yml
@@ -29,14 +29,15 @@
   list_url: "https://www.leconomiste.com/categorie/Finances-Banques"
   base_url: "https://www.leconomiste.com"
   selectors:
-    # portada + filas normales
-    container: "div.image_une, div.views-row"
+    # cada noticia = la columna completa (contiene imagen y <h2>)
+    container: "div.col-xs-12.col-sm-12.col-md-6.col-lg-6"
     headline: "h2 a"
     link_attr: "href"
-    description: ""
+    description: ""           # siguen sin snippet visible
     image: "img::attr(src)"
     date: "span.date-display-single"
   date_regex: '(\d{1,2})/(\d{1,2})/(\d{2,4})'
+
 
 # EcoActu – Économie Nationale
 - name: ecoactu
