--- a/sources.yml
+++ b/sources.yml
@@ -1,65 +1,25 @@
-# Finances News
+# ───────────── Finances News ─────────────
 - name: financesnews
   list_url: "https://fnh.ma/articles/actualite-financiere-maroc"
   base_url: "https://fnh.ma"
   selectors:
-    container: "div.row"
-    headline: "h2 a"
+    container: "div.row"                       # bloque <div class="row">…</div>
+    headline:  "h2 a"                          # titular + enlace
     link_attr: "href"
-    description: "div.list_article_detail p"
-    image: "img::attr(src)"
-    date: "label.itemdate"
-  date_regex: '\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b'
-  month_map: &month_map
-    Janvier: "01"
-    Février: "02"
-    Mars:    "03"
-    Avril:   "04"
-    Mai:     "05"
-    Juin:    "06"
-    Juillet: "07"
-    Août:    "08"
-    Septembre: "09"
-    Octobre:   "10"
-    Novembre:  "11"
-    Décembre:  "12"
-
-# L’Economiste – Finances & Banques
-- name: leconomiste
-  list_url: "https://www.leconomiste.com/categorie/Finances-Banques"
-  base_url: "https://www.leconomiste.com"
-  selectors:
-    container: "div.col-xs-12.col-sm-12.col-md-6.col-lg-6"
-    headline: "h2 a"
-    link_attr: "href"
-    description: ""
-    image: "img::attr(src)"
-    date: "span.date-display-single"
-  date_regex: '(\\d{1,2})/(\\d{1,2})/(\\d{2,4})'
-
-# EcoActu – Économie Nationale
-- name: ecoactu
-  list_url: "https://ecoactu.ma/economie/economie-nationale/"
-  base_url: "https://ecoactu.ma"
-  selectors:
-    container: "li.list-post"
-    headline: "h2 a"
-    link_attr: "href"
-    description: "div.item-content p"
-    image: "div.thumbnail a::attr(style), figure img::attr(src), img::attr(src)"
-    date: "time.entry-date"
-  date_regex: '\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b'
-  month_map: *month_map
-
-# Bourse de Casablanca
-- name: casablanca_bourse
-  list_url: "https://www.casablanca-bourse.com/en/insights-institutionnels"
-  base_url: "https://www.casablanca-bourse.com"
-  selectors:
-    container: "div.h-full.flex.flex-col.rounded-lg"
-    headline: "h3"
-    link_attr: "href"
-    description: "a p"
-    image: "img::attr(src)"
-    date: "p.text-gray-300.text-xs"
-  date_regex: '(\\d{4})-(\\d{2})-(\\d{2})'
+    description: "div.list_article_detail p"   # primer párrafo
+    image: "img::attr(src)"                    # miniatura
+    date:  "label.itemdate"                    # «Vendredi 25 Juillet 2025»
+  date_regex: "\\b(\\d{1,2})\\s+([A-Za-zéû]+)\\s+(\\d{4})\\b"
+  month_map: &fr_months
+    Janvier:    "01"
+    Février:    "02"
+    Mars:       "03"
+    Avril:      "04"
+    Mai:        "05"
+    Juin:       "06"
+    Juillet:    "07"
+    Août:       "08"
+    Septembre:  "09"
+    Octobre:    "10"
+    Novembre:   "11"
+    Décembre:   "12"
