--- a/sources.yml
+++ b/sources.yml
@@ -24,18 +24,16 @@
     Novembre:   "11"
     Décembre:   "12"
 
-    # L’Economiste – Finances & Banques
-- name: leconomiste
-  list_url: "https://www.leconomiste.com/categorie/Finances-Banques"
+   # ───────────── L’Economiste – Économie ─────────────
+- name: leconomiste_economie
+  list_url: "https://www.leconomiste.com/categorie/Economie"
   base_url: "https://www.leconomiste.com"
   selectors:
-    # Cada noticia ocupa la mitad de la fila (imagen + texto)
-    container: "div.col-xs-12.col-sm-12.col-md-6.col-lg-6"
-    headline: "h2 a"
+    container: "div.col-xs-12.col-sm-12.col-md-6.col-lg-6"   # <div …> que agrupa miniatura+texto
+    headline:  "h2 a"                                        # <h2><a …>
     link_attr: "href"
-    description: ""                # se llenará vía _meta_description()
+    description: ""                                          # (se rellenará con meta‑description)
     image: "div.image_une img::attr(src)"
-    date: "span.date-display-single"
-  # dd/mm/aa o dd/mm/aaaa
+    date:  "span.date-display-single"                        # «31/07/25» o «31/07/2025»
+  # dd/mm/yy o dd/mm/yyyy
   date_regex: "(\\d{1,2})\\/(\\d{1,2})\\/(\\d{2,4})"
-
